# stick-brawl

./: CMakeLists.txt  LICENSE  README.md
assets/rules/: default.json
assets/weapons/: fists.json  grenade_launcher.json  horn_blast.json  jaw_snap.json  katana.json  nuke_grenade.json  pistol.json  poison_spit.json  purse_swing.json  shotgun.json
src/: Arena.cpp  Arena.h  ContactListener.cpp  ContactListener.h  Game.cpp  Game.h  HUD.cpp  HUD.h  Input.cpp  Input.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  RulesEngine.cpp  RulesEngine.h  StickFigure.cpp  StickFigure.h  Weapon.cpp  Weapon.h  WeaponFactory.cpp  WeaponFactory.h  main.cpp
